RESOLVED FIXED 76549
[GTK] [regression] A couple of tests failing after r105253
https://bugs.webkit.org/show_bug.cgi?id=76549
Summary [GTK] [regression] A couple of tests failing after r105253
Sergio Villar Senin
Reported 2012-01-18 09:20:29 PST
These two: fast/forms/select-popup-pagekeys.html fast/forms/select/menulist-onchange-fired-with-key-up-down.html are failing since r105253. Looks like there was a confusion in the name of the function that GTK Render Theme needs to implement.
Attachments
Patch (1.77 KB, patch)
2012-01-18 09:24 PST, Sergio Villar Senin
gustavo: review+
Sergio Villar Senin
Comment 1 2012-01-18 09:24:28 PST
Sergio Villar Senin
Comment 2 2012-01-18 09:31:05 PST
hmmm I guess I forgot the OVERRIDE
Gustavo Noronha (kov)
Comment 3 2012-01-18 09:31:15 PST
Comment on attachment 122942 [details] Patch yep
Sergio Villar Senin
Comment 4 2012-01-18 09:41:07 PST
Mario Sanchez Prada
Comment 5 2012-01-20 03:40:20 PST
*** Bug 76531 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.