[GTK] [regression] A couple of tests failing after r105253 https://bugs.webkit.org/show_bug.cgi?id=76549

Reviewed by Gustavo Noronha Silva.

Fixes a regression added by r105253. The method that
RenderThemeGtk needs to overwrite is popsMenuBySpaceOrReturn()
instead of popsMenuByArrowKeys().

No new tests as it's already covered by
fast/forms/select-popup-pagekeys.html and
fast/forms/select/menulist-onchange-fired-with-key-up-down.html
that started to fail after the revision mentioned above.

* platform/gtk/RenderThemeGtk.h:
(WebCore::RenderThemeGtk::popsMenuBySpaceOrReturn):

Canonical link: https://commits.webkit.org/93367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105286 268f45cc-cd09-0410-ab3c-d52691b4dbfc