Source/WebCore/platform/gtk/RenderThemeGtk.h
@@ -82,7 +82,7 @@ public:
     virtual void systemFont(int propId, FontDescription&) const;
     virtual Color systemColor(int cssValueId) const;
 
-    virtual bool popsMenuByArrowKeys() const OVERRIDE { return true; }
+    virtual bool popsMenuBySpaceOrReturn() const OVERRIDE { return true; }
 
 #if ENABLE(VIDEO)
     virtual String extraMediaControlsStyleSheet();
